# gin/cmd/docs/swagger.json
@@ -9,6 +9,54 @@
     "host": "localhost:9000",
     "basePath": "/api",
     "paths": {
+        "/handle-task": {
+            "post": {
+                "description": "when method is \"add\", add a new task",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "appapi"
+                ],
+                "summary": "add, modify or delete a task",
+                "parameters": [
+                    {
+                        "description": "请求体",
+                        "name": "jsonbody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.hellomessage"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应",
+                        "schema": {
+                            "type": "json"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "服务不存在",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/posttest": {
             "post": {
                 "description": "post to it, when body is {\"content\": \"hello api\"}, you get 200 with answer",
